parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> decls
Rule 2     empty -> <empty>
Rule 3     decls -> declsx
Rule 4     declsx -> decl declsx
Rule 5     declsx -> empty
Rule 6     decl -> PROTOCOL STRING SEMI
Rule 7     decl -> INCLUDE STRING SEMI
Rule 8     decl -> MACHINE ( ident pairs ) : params { decls }
Rule 9     decl -> ACTION ( ident pairs ) statements
Rule 10    decl -> IN_PORT ( ident , type , var pairs ) statements
Rule 11    decl -> OUT_PORT ( ident , type , var pairs ) SEMI
Rule 12    decl -> TRANS ( idents , idents , ident pairs ) idents
Rule 13    decl -> TRANS ( idents , idents pairs ) idents
Rule 14    decl -> TRANS ( idents , idents , ident pairs ) idents idents
Rule 15    decl -> TRANS ( idents , idents pairs ) idents idents
Rule 16    decl -> EXTERN_TYPE ( type pairs ) SEMI
Rule 17    decl -> GLOBAL ( type pairs ) { type_members }
Rule 18    decl -> STRUCT ( type pairs ) { type_members }
Rule 19    decl -> ENUM ( type pairs ) { type_enums }
Rule 20    decl -> STATE_DECL ( type pairs ) { type_states }
Rule 21    decl -> type ident pairs SEMI
Rule 22    decl -> func_decl
Rule 23    func_decl -> void ident ( params ) pairs SEMI
Rule 24    func_decl -> type ident ( params ) pairs SEMI
Rule 25    decl -> func_def
Rule 26    func_def -> void ident ( params ) pairs statements
Rule 27    func_def -> type ident ( params ) pairs statements
Rule 28    type_members -> type_member type_members
Rule 29    type_members -> empty
Rule 30    type_member -> type_or_void ident ( types ) pairs SEMI
Rule 31    type_member -> type_or_void ident ( params ) pairs statements
Rule 32    type_member -> type_or_void ident pairs SEMI
Rule 33    type_member -> type_or_void ident ASSIGN expr SEMI
Rule 34    type_enums -> type_enum type_enums
Rule 35    type_enums -> empty
Rule 36    type_enum -> ident pairs SEMI
Rule 37    type_states -> type_state type_states
Rule 38    type_states -> empty
Rule 39    type_state -> ident , enumeration pairs SEMI
Rule 40    types -> type , types
Rule 41    types -> type
Rule 42    types -> empty
Rule 43    typestr -> typestr DOUBLE_COLON ident
Rule 44    typestr -> ident
Rule 45    type -> typestr
Rule 46    void -> VOID
Rule 47    type_or_void -> type
Rule 48    type_or_void -> void
Rule 49    params -> param , params
Rule 50    params -> param
Rule 51    params -> empty
Rule 52    param -> type ident
Rule 53    param -> type STAR ident
Rule 54    param -> type STAR ident = STRING
Rule 55    param -> type ident = NUMBER
Rule 56    param -> type ident = LIT_BOOL
Rule 57    param -> type ident = STRING
Rule 58    idents -> { identx }
Rule 59    idents -> ident
Rule 60    identx -> ident SEMI identx
Rule 61    identx -> ident , identx
Rule 62    identx -> ident identx
Rule 63    identx -> empty
Rule 64    ident -> IDENT
Rule 65    pairs -> , pairsx
Rule 66    pairs -> empty
Rule 67    pairsx -> pair , pairsx
Rule 68    pairsx -> pair
Rule 69    pair -> ident = STRING
Rule 70    pair -> ident = ident
Rule 71    pair -> ident = NUMBER
Rule 72    pair -> STRING
Rule 73    statements -> { statements_inner }
Rule 74    statements -> { }
Rule 75    statements_inner -> statement statements_inner
Rule 76    statements_inner -> statement
Rule 77    exprs -> expr , exprs
Rule 78    exprs -> expr
Rule 79    exprs -> empty
Rule 80    statement -> expr SEMI
Rule 81    statement -> expr ASSIGN expr SEMI
Rule 82    statement -> ENQUEUE ( var , type pairs ) statements
Rule 83    statement -> STALL_AND_WAIT ( var , var ) SEMI
Rule 84    statement -> PEEK ( var , type pairs ) statements
Rule 85    statement -> COPY_HEAD ( var , var pairs ) SEMI
Rule 86    statement -> CHECK_ALLOCATE ( var ) SEMI
Rule 87    statement -> CHECK_STOP_SLOTS ( var , STRING , STRING ) SEMI
Rule 88    aexpr -> STATIC_CAST ( type , expr )
Rule 89    aexpr -> STATIC_CAST ( type , STRING , expr )
Rule 90    statement -> RETURN expr SEMI
Rule 91    statement -> if_statement
Rule 92    if_statement -> IF ( expr ) statements
Rule 93    if_statement -> IF ( expr ) statements ELSE statements
Rule 94    if_statement -> IF ( expr ) statements ELSE if_statement
Rule 95    aexpr -> var
Rule 96    aexpr -> type ident
Rule 97    aexpr -> literal
Rule 98    aexpr -> enumeration
Rule 99    aexpr -> ident ( exprs )
Rule 100   aexpr -> NEW type
Rule 101   aexpr -> OOD
Rule 102   aexpr -> aexpr DOT ident
Rule 103   aexpr -> aexpr DOT ident ( exprs )
Rule 104   aexpr -> aexpr [ exprs ]
Rule 105   aexpr -> type DOUBLE_COLON ident ( exprs )
Rule 106   expr -> aexpr
Rule 107   expr -> expr STAR expr
Rule 108   expr -> expr SLASH expr
Rule 109   expr -> expr PLUS expr
Rule 110   expr -> expr DASH expr
Rule 111   expr -> expr LT expr
Rule 112   expr -> expr GT expr
Rule 113   expr -> expr LE expr
Rule 114   expr -> expr GE expr
Rule 115   expr -> expr EQ expr
Rule 116   expr -> expr NE expr
Rule 117   expr -> expr AND expr
Rule 118   expr -> expr OR expr
Rule 119   expr -> expr RIGHTSHIFT expr
Rule 120   expr -> expr LEFTSHIFT expr
Rule 121   expr -> NOT expr
Rule 122   expr -> DASH expr
Rule 123   aexpr -> ( expr )
Rule 124   aexpr -> IS_VALID ( var )
Rule 125   aexpr -> IS_INVALID ( var )
Rule 126   literal -> STRING
Rule 127   literal -> NUMBER
Rule 128   literal -> FLOATNUMBER
Rule 129   literal -> LIT_BOOL
Rule 130   enumeration -> ident : ident
Rule 131   var -> ident

Terminals, with rules where they appear

(                    : 8 9 10 11 12 13 14 15 16 17 18 19 20 23 24 26 27 30 31 82 83 84 85 86 87 88 89 92 93 94 99 103 105 123 124 125
)                    : 8 9 10 11 12 13 14 15 16 17 18 19 20 23 24 26 27 30 31 82 83 84 85 86 87 88 89 92 93 94 99 103 105 123 124 125
,                    : 10 10 11 11 12 12 13 14 14 15 39 40 49 61 65 67 77 82 83 84 85 87 87 88 89 89
:                    : 8 130
=                    : 54 55 56 57 69 70 71
ACTION               : 9
AND                  : 117
ASSIGN               : 33 81
CHECK_ALLOCATE       : 86
CHECK_STOP_SLOTS     : 87
COPY_HEAD            : 85
DASH                 : 110 122
DOT                  : 102 103
DOUBLE_COLON         : 43 105
ELSE                 : 93 94
ENQUEUE              : 82
ENUM                 : 19
EQ                   : 115
EXTERN_TYPE          : 16
FLOATNUMBER          : 128
GE                   : 114
GLOBAL               : 17
GT                   : 112
IDENT                : 64
IF                   : 92 93 94
INCLUDE              : 7
IN_PORT              : 10
IS_INVALID           : 125
IS_VALID             : 124
LE                   : 113
LEFTSHIFT            : 120
LIT_BOOL             : 56 129
LT                   : 111
MACHINE              : 8
NE                   : 116
NEW                  : 100
NOT                  : 121
NUMBER               : 55 71 127
OOD                  : 101
OR                   : 118
OUT_PORT             : 11
PEEK                 : 84
PLUS                 : 109
PROTOCOL             : 6
RETURN               : 90
RIGHTSHIFT           : 119
SEMI                 : 6 7 11 16 21 23 24 30 32 33 36 39 60 80 81 83 85 86 87 90
SLASH                : 108
STALL_AND_WAIT       : 83
STAR                 : 53 54 107
STATE_DECL           : 20
STATIC_CAST          : 88 89
STRING               : 6 7 54 57 69 72 87 87 89 126
STRUCT               : 18
TRANS                : 12 13 14 15
VOID                 : 46
[                    : 104
]                    : 104
error                : 
{                    : 8 17 18 19 20 58 73 74
}                    : 8 17 18 19 20 58 73 74

Nonterminals, with rules where they appear

aexpr                : 102 103 104 106
decl                 : 4
decls                : 1 8
declsx               : 3 4
empty                : 5 29 35 38 42 51 63 66 79
enumeration          : 39 98
expr                 : 33 77 78 80 81 81 88 89 90 92 93 94 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 122 123
exprs                : 77 99 103 104 105
file                 : 0
func_decl            : 22
func_def             : 25
ident                : 8 9 10 11 12 14 21 23 24 26 27 30 31 32 33 36 39 43 44 52 53 54 55 56 57 59 60 61 62 69 70 70 71 96 99 102 103 105 130 130 131
idents               : 12 12 12 13 13 13 14 14 14 14 15 15 15 15
identx               : 58 60 61 62
if_statement         : 91 94
literal              : 97
pair                 : 67 68
pairs                : 8 9 10 11 12 13 14 15 16 17 18 19 20 21 23 24 26 27 30 31 32 36 39 82 84 85
pairsx               : 65 67
param                : 49 50
params               : 8 23 24 26 27 31 49
statement            : 75 76
statements           : 9 10 26 27 31 82 84 92 93 93 94
statements_inner     : 73 75
type                 : 10 11 16 17 18 19 20 21 24 27 40 41 47 52 53 54 55 56 57 82 84 88 89 96 100 105
type_enum            : 34
type_enums           : 19 34
type_member          : 28
type_members         : 17 18 28
type_or_void         : 30 31 32 33
type_state           : 37
type_states          : 20 37
types                : 30 40
typestr              : 43 45
var                  : 10 11 82 83 83 84 85 85 86 87 95 124 125
void                 : 23 26 48

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . decls
    (3) decls -> . declsx
    (4) declsx -> . decl declsx
    (5) declsx -> . empty
    (6) decl -> . PROTOCOL STRING SEMI
    (7) decl -> . INCLUDE STRING SEMI
    (8) decl -> . MACHINE ( ident pairs ) : params { decls }
    (9) decl -> . ACTION ( ident pairs ) statements
    (10) decl -> . IN_PORT ( ident , type , var pairs ) statements
    (11) decl -> . OUT_PORT ( ident , type , var pairs ) SEMI
    (12) decl -> . TRANS ( idents , idents , ident pairs ) idents
    (13) decl -> . TRANS ( idents , idents pairs ) idents
    (14) decl -> . TRANS ( idents , idents , ident pairs ) idents idents
    (15) decl -> . TRANS ( idents , idents pairs ) idents idents
    (16) decl -> . EXTERN_TYPE ( type pairs ) SEMI
    (17) decl -> . GLOBAL ( type pairs ) { type_members }
    (18) decl -> . STRUCT ( type pairs ) { type_members }
    (19) decl -> . ENUM ( type pairs ) { type_enums }
    (20) decl -> . STATE_DECL ( type pairs ) { type_states }
    (21) decl -> . type ident pairs SEMI
    (22) decl -> . func_decl
    (25) decl -> . func_def
    (2) empty -> .
    (45) type -> . typestr
    (23) func_decl -> . void ident ( params ) pairs SEMI
    (24) func_decl -> . type ident ( params ) pairs SEMI
    (26) func_def -> . void ident ( params ) pairs statements
    (27) func_def -> . type ident ( params ) pairs statements
    (43) typestr -> . typestr DOUBLE_COLON ident
    (44) typestr -> . ident
    (46) void -> . VOID
    (64) ident -> . IDENT

    PROTOCOL        shift and go to state 13
    INCLUDE         shift and go to state 20
    MACHINE         shift and go to state 17
    ACTION          shift and go to state 9
    IN_PORT         shift and go to state 25
    OUT_PORT        shift and go to state 8
    TRANS           shift and go to state 7
    EXTERN_TYPE     shift and go to state 18
    GLOBAL          shift and go to state 3
    STRUCT          shift and go to state 22
    ENUM            shift and go to state 16
    STATE_DECL      shift and go to state 23
    $end            reduce using rule 2 (empty -> .)
    VOID            shift and go to state 2
    IDENT           shift and go to state 4

    decl                           shift and go to state 1
    ident                          shift and go to state 21
    func_def                       shift and go to state 14
    void                           shift and go to state 15
    declsx                         shift and go to state 12
    file                           shift and go to state 5
    func_decl                      shift and go to state 6
    decls                          shift and go to state 24
    type                           shift and go to state 10
    typestr                        shift and go to state 19
    empty                          shift and go to state 11

state 1

    (4) declsx -> decl . declsx
    (4) declsx -> . decl declsx
    (5) declsx -> . empty
    (6) decl -> . PROTOCOL STRING SEMI
    (7) decl -> . INCLUDE STRING SEMI
    (8) decl -> . MACHINE ( ident pairs ) : params { decls }
    (9) decl -> . ACTION ( ident pairs ) statements
    (10) decl -> . IN_PORT ( ident , type , var pairs ) statements
    (11) decl -> . OUT_PORT ( ident , type , var pairs ) SEMI
    (12) decl -> . TRANS ( idents , idents , ident pairs ) idents
    (13) decl -> . TRANS ( idents , idents pairs ) idents
    (14) decl -> . TRANS ( idents , idents , ident pairs ) idents idents
    (15) decl -> . TRANS ( idents , idents pairs ) idents idents
    (16) decl -> . EXTERN_TYPE ( type pairs ) SEMI
    (17) decl -> . GLOBAL ( type pairs ) { type_members }
    (18) decl -> . STRUCT ( type pairs ) { type_members }
    (19) decl -> . ENUM ( type pairs ) { type_enums }
    (20) decl -> . STATE_DECL ( type pairs ) { type_states }
    (21) decl -> . type ident pairs SEMI
    (22) decl -> . func_decl
    (25) decl -> . func_def
    (2) empty -> .
    (45) type -> . typestr
    (23) func_decl -> . void ident ( params ) pairs SEMI
    (24) func_decl -> . type ident ( params ) pairs SEMI
    (26) func_def -> . void ident ( params ) pairs statements
    (27) func_def -> . type ident ( params ) pairs statements
    (43) typestr -> . typestr DOUBLE_COLON ident
    (44) typestr -> . ident
    (46) void -> . VOID
    (64) ident -> . IDENT

    PROTOCOL        shift and go to state 13
    INCLUDE         shift and go to state 20
    MACHINE         shift and go to state 17
    ACTION          shift and go to state 9
    IN_PORT         shift and go to state 25
    OUT_PORT        shift and go to state 8
    TRANS           shift and go to state 7
    EXTERN_TYPE     shift and go to state 18
    GLOBAL          shift and go to state 3
    STRUCT          shift and go to state 22
    ENUM            shift and go to state 16
    STATE_DECL      shift and go to state 23
    $end            reduce using rule 2 (empty -> .)
    }               reduce using rule 2 (empty -> .)
    VOID            shift and go to state 2
    IDENT           shift and go to state 4

    decl                           shift and go to state 1
    ident                          shift and go to state 21
    func_def                       shift and go to state 14
    void                           shift and go to state 15
    declsx                         shift and go to state 26
    func_decl                      shift and go to state 6
    type                           shift and go to state 10
    typestr                        shift and go to state 19
    empty                          shift and go to state 11

state 2

    (46) void -> VOID .

    IDENT           reduce using rule 46 (void -> VOID .)


state 3

    (17) decl -> GLOBAL . ( type pairs ) { type_members }

    (               shift and go to state 27


state 4

    (64) ident -> IDENT .

    =               reduce using rule 64 (ident -> IDENT .)
    {               reduce using rule 64 (ident -> IDENT .)
    IDENT           reduce using rule 64 (ident -> IDENT .)
    PROTOCOL        reduce using rule 64 (ident -> IDENT .)
    INCLUDE         reduce using rule 64 (ident -> IDENT .)
    MACHINE         reduce using rule 64 (ident -> IDENT .)
    ACTION          reduce using rule 64 (ident -> IDENT .)
    IN_PORT         reduce using rule 64 (ident -> IDENT .)
    OUT_PORT        reduce using rule 64 (ident -> IDENT .)
    TRANS           reduce using rule 64 (ident -> IDENT .)
    EXTERN_TYPE     reduce using rule 64 (ident -> IDENT .)
    GLOBAL          reduce using rule 64 (ident -> IDENT .)
    STRUCT          reduce using rule 64 (ident -> IDENT .)
    ENUM            reduce using rule 64 (ident -> IDENT .)
    STATE_DECL      reduce using rule 64 (ident -> IDENT .)
    VOID            reduce using rule 64 (ident -> IDENT .)
    $end            reduce using rule 64 (ident -> IDENT .)
    }               reduce using rule 64 (ident -> IDENT .)
    SEMI            reduce using rule 64 (ident -> IDENT .)
    ,               reduce using rule 64 (ident -> IDENT .)
    (               reduce using rule 64 (ident -> IDENT .)
    DOT             reduce using rule 64 (ident -> IDENT .)
    [               reduce using rule 64 (ident -> IDENT .)
    ASSIGN          reduce using rule 64 (ident -> IDENT .)
    STAR            reduce using rule 64 (ident -> IDENT .)
    SLASH           reduce using rule 64 (ident -> IDENT .)
    PLUS            reduce using rule 64 (ident -> IDENT .)
    DASH            reduce using rule 64 (ident -> IDENT .)
    LT              reduce using rule 64 (ident -> IDENT .)
    GT              reduce using rule 64 (ident -> IDENT .)
    LE              reduce using rule 64 (ident -> IDENT .)
    GE              reduce using rule 64 (ident -> IDENT .)
    EQ              reduce using rule 64 (ident -> IDENT .)
    NE              reduce using rule 64 (ident -> IDENT .)
    AND             reduce using rule 64 (ident -> IDENT .)
    OR              reduce using rule 64 (ident -> IDENT .)
    RIGHTSHIFT      reduce using rule 64 (ident -> IDENT .)
    LEFTSHIFT       reduce using rule 64 (ident -> IDENT .)
    )               reduce using rule 64 (ident -> IDENT .)
    ]               reduce using rule 64 (ident -> IDENT .)
    DOUBLE_COLON    reduce using rule 64 (ident -> IDENT .)
    :               reduce using rule 64 (ident -> IDENT .)


state 5

    (0) S' -> file .



state 6

    (22) decl -> func_decl .

    PROTOCOL        reduce using rule 22 (decl -> func_decl .)
    INCLUDE         reduce using rule 22 (decl -> func_decl .)
    MACHINE         reduce using rule 22 (decl -> func_decl .)
    ACTION          reduce using rule 22 (decl -> func_decl .)
    IN_PORT         reduce using rule 22 (decl -> func_decl .)
    OUT_PORT        reduce using rule 22 (decl -> func_decl .)
    TRANS           reduce using rule 22 (decl -> func_decl .)
    EXTERN_TYPE     reduce using rule 22 (decl -> func_decl .)
    GLOBAL          reduce using rule 22 (decl -> func_decl .)
    STRUCT          reduce using rule 22 (decl -> func_decl .)
    ENUM            reduce using rule 22 (decl -> func_decl .)
    STATE_DECL      reduce using rule 22 (decl -> func_decl .)
    VOID            reduce using rule 22 (decl -> func_decl .)
    IDENT           reduce using rule 22 (decl -> func_decl .)
    }               reduce using rule 22 (decl -> func_decl .)
    $end            reduce using rule 22 (decl -> func_decl .)


state 7

    (12) decl -> TRANS . ( idents , idents , ident pairs ) idents
    (13) decl -> TRANS . ( idents , idents pairs ) idents
    (14) decl -> TRANS . ( idents , idents , ident pairs ) idents idents
    (15) decl -> TRANS . ( idents , idents pairs ) idents idents

    (               shift and go to state 28


state 8

    (11) decl -> OUT_PORT . ( ident , type , var pairs ) SEMI

    (               shift and go to state 29


state 9

    (9) decl -> ACTION . ( ident pairs ) statements

    (               shift and go to state 30


state 10

    (21) decl -> type . ident pairs SEMI
    (24) func_decl -> type . ident ( params ) pairs SEMI
    (27) func_def -> type . ident ( params ) pairs statements
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 31

state 11

    (5) declsx -> empty .

    $end            reduce using rule 5 (declsx -> empty .)
    }               reduce using rule 5 (declsx -> empty .)


state 12

    (3) decls -> declsx .

    }               reduce using rule 3 (decls -> declsx .)
    $end            reduce using rule 3 (decls -> declsx .)


state 13

    (6) decl -> PROTOCOL . STRING SEMI

    STRING          shift and go to state 32


state 14

    (25) decl -> func_def .

    PROTOCOL        reduce using rule 25 (decl -> func_def .)
    INCLUDE         reduce using rule 25 (decl -> func_def .)
    MACHINE         reduce using rule 25 (decl -> func_def .)
    ACTION          reduce using rule 25 (decl -> func_def .)
    IN_PORT         reduce using rule 25 (decl -> func_def .)
    OUT_PORT        reduce using rule 25 (decl -> func_def .)
    TRANS           reduce using rule 25 (decl -> func_def .)
    EXTERN_TYPE     reduce using rule 25 (decl -> func_def .)
    GLOBAL          reduce using rule 25 (decl -> func_def .)
    STRUCT          reduce using rule 25 (decl -> func_def .)
    ENUM            reduce using rule 25 (decl -> func_def .)
    STATE_DECL      reduce using rule 25 (decl -> func_def .)
    VOID            reduce using rule 25 (decl -> func_def .)
    IDENT           reduce using rule 25 (decl -> func_def .)
    }               reduce using rule 25 (decl -> func_def .)
    $end            reduce using rule 25 (decl -> func_def .)


state 15

    (23) func_decl -> void . ident ( params ) pairs SEMI
    (26) func_def -> void . ident ( params ) pairs statements
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 33

state 16

    (19) decl -> ENUM . ( type pairs ) { type_enums }

    (               shift and go to state 34


state 17

    (8) decl -> MACHINE . ( ident pairs ) : params { decls }

    (               shift and go to state 35


state 18

    (16) decl -> EXTERN_TYPE . ( type pairs ) SEMI

    (               shift and go to state 36


state 19

    (45) type -> typestr .
    (43) typestr -> typestr . DOUBLE_COLON ident

  ! shift/reduce conflict for DOUBLE_COLON resolved as shift
    IDENT           reduce using rule 45 (type -> typestr .)
    ,               reduce using rule 45 (type -> typestr .)
    )               reduce using rule 45 (type -> typestr .)
    DOT             reduce using rule 45 (type -> typestr .)
    [               reduce using rule 45 (type -> typestr .)
    SEMI            reduce using rule 45 (type -> typestr .)
    ASSIGN          reduce using rule 45 (type -> typestr .)
    STAR            reduce using rule 45 (type -> typestr .)
    SLASH           reduce using rule 45 (type -> typestr .)
    PLUS            reduce using rule 45 (type -> typestr .)
    DASH            reduce using rule 45 (type -> typestr .)
    LT              reduce using rule 45 (type -> typestr .)
    GT              reduce using rule 45 (type -> typestr .)
    LE              reduce using rule 45 (type -> typestr .)
    GE              reduce using rule 45 (type -> typestr .)
    EQ              reduce using rule 45 (type -> typestr .)
    NE              reduce using rule 45 (type -> typestr .)
    AND             reduce using rule 45 (type -> typestr .)
    OR              reduce using rule 45 (type -> typestr .)
    RIGHTSHIFT      reduce using rule 45 (type -> typestr .)
    LEFTSHIFT       reduce using rule 45 (type -> typestr .)
    ]               reduce using rule 45 (type -> typestr .)
    DOUBLE_COLON    shift and go to state 37

  ! DOUBLE_COLON    [ reduce using rule 45 (type -> typestr .) ]


state 20

    (7) decl -> INCLUDE . STRING SEMI

    STRING          shift and go to state 38


state 21

    (44) typestr -> ident .

    DOUBLE_COLON    reduce using rule 44 (typestr -> ident .)
    ,               reduce using rule 44 (typestr -> ident .)
    )               reduce using rule 44 (typestr -> ident .)
    IDENT           reduce using rule 44 (typestr -> ident .)
    STAR            reduce using rule 44 (typestr -> ident .)
    DOT             reduce using rule 44 (typestr -> ident .)
    [               reduce using rule 44 (typestr -> ident .)
    SEMI            reduce using rule 44 (typestr -> ident .)
    ASSIGN          reduce using rule 44 (typestr -> ident .)
    SLASH           reduce using rule 44 (typestr -> ident .)
    PLUS            reduce using rule 44 (typestr -> ident .)
    DASH            reduce using rule 44 (typestr -> ident .)
    LT              reduce using rule 44 (typestr -> ident .)
    GT              reduce using rule 44 (typestr -> ident .)
    LE              reduce using rule 44 (typestr -> ident .)
    GE              reduce using rule 44 (typestr -> ident .)
    EQ              reduce using rule 44 (typestr -> ident .)
    NE              reduce using rule 44 (typestr -> ident .)
    AND             reduce using rule 44 (typestr -> ident .)
    OR              reduce using rule 44 (typestr -> ident .)
    RIGHTSHIFT      reduce using rule 44 (typestr -> ident .)
    LEFTSHIFT       reduce using rule 44 (typestr -> ident .)
    ]               reduce using rule 44 (typestr -> ident .)


state 22

    (18) decl -> STRUCT . ( type pairs ) { type_members }

    (               shift and go to state 39


state 23

    (20) decl -> STATE_DECL . ( type pairs ) { type_states }

    (               shift and go to state 40


state 24

    (1) file -> decls .

    $end            reduce using rule 1 (file -> decls .)


state 25

    (10) decl -> IN_PORT . ( ident , type , var pairs ) statements

    (               shift and go to state 41


state 26

    (4) declsx -> decl declsx .

    $end            reduce using rule 4 (declsx -> decl declsx .)
    }               reduce using rule 4 (declsx -> decl declsx .)


state 27

    (17) decl -> GLOBAL ( . type pairs ) { type_members }
    (45) type -> . typestr
    (43) typestr -> . typestr DOUBLE_COLON ident
    (44) typestr -> . ident
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 21
    type                           shift and go to state 42
    typestr                        shift and go to state 19

state 28

    (12) decl -> TRANS ( . idents , idents , ident pairs ) idents
    (13) decl -> TRANS ( . idents , idents pairs ) idents
    (14) decl -> TRANS ( . idents , idents , ident pairs ) idents idents
    (15) decl -> TRANS ( . idents , idents pairs ) idents idents
    (58) idents -> . { identx }
    (59) idents -> . ident
    (64) ident -> . IDENT

    {               shift and go to state 45
    IDENT           shift and go to state 4

    ident                          shift and go to state 43
    idents                         shift and go to state 44

state 29

    (11) decl -> OUT_PORT ( . ident , type , var pairs ) SEMI
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 46

state 30

    (9) decl -> ACTION ( . ident pairs ) statements
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 47

state 31

    (21) decl -> type ident . pairs SEMI
    (24) func_decl -> type ident . ( params ) pairs SEMI
    (27) func_def -> type ident . ( params ) pairs statements
    (65) pairs -> . , pairsx
    (66) pairs -> . empty
    (2) empty -> .

    (               shift and go to state 49
    ,               shift and go to state 50
    SEMI            reduce using rule 2 (empty -> .)

    pairs                          shift and go to state 48
    empty                          shift and go to state 51

state 32

    (6) decl -> PROTOCOL STRING . SEMI

    SEMI            shift and go to state 52


state 33

    (23) func_decl -> void ident . ( params ) pairs SEMI
    (26) func_def -> void ident . ( params ) pairs statements

    (               shift and go to state 53


state 34

    (19) decl -> ENUM ( . type pairs ) { type_enums }
    (45) type -> . typestr
    (43) typestr -> . typestr DOUBLE_COLON ident
    (44) typestr -> . ident
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 21
    type                           shift and go to state 54
    typestr                        shift and go to state 19

state 35

    (8) decl -> MACHINE ( . ident pairs ) : params { decls }
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 55

state 36

    (16) decl -> EXTERN_TYPE ( . type pairs ) SEMI
    (45) type -> . typestr
    (43) typestr -> . typestr DOUBLE_COLON ident
    (44) typestr -> . ident
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 21
    type                           shift and go to state 56
    typestr                        shift and go to state 19

state 37

    (43) typestr -> typestr DOUBLE_COLON . ident
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 57

state 38

    (7) decl -> INCLUDE STRING . SEMI

    SEMI            shift and go to state 58


state 39

    (18) decl -> STRUCT ( . type pairs ) { type_members }
    (45) type -> . typestr
    (43) typestr -> . typestr DOUBLE_COLON ident
    (44) typestr -> . ident
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 21
    type                           shift and go to state 59
    typestr                        shift and go to state 19

state 40

    (20) decl -> STATE_DECL ( . type pairs ) { type_states }
    (45) type -> . typestr
    (43) typestr -> . typestr DOUBLE_COLON ident
    (44) typestr -> . ident
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 21
    type                           shift and go to state 60
    typestr                        shift and go to state 19

state 41

    (10) decl -> IN_PORT ( . ident , type , var pairs ) statements
    (64) ident -> . IDENT

    IDENT           shift and go to state 4

    ident                          shift and go to state 61

state 42

    (17) decl -> GLOBAL ( type . pairs ) { type_members }
    (65) pairs -> . , pairsx
    (66) pairs -> . empty
    (2) empty -> .

    ,               shift and go to state 50
    )               reduce using rule 2 (empty -> .)

    pairs                          shift and go to state 62
    empty                          shift and go to state 51

state 43

    (59) idents -> ident .

    ,               reduce using rule 59 (idents -> ident .)
    )               reduce using rule 59 (idents -> ident .)
    {               reduce using rule 59 (idents -> ident .)
    IDENT           reduce using rule 59 (idents -> ident .)
    PROTOCOL        reduce using rule 59 (idents -> ident .)
    INCLUDE         reduce using rule 59 (idents -> ident .)
    MACHINE         reduce using rule 59 (idents -> ident .)
    ACTION          reduce using rule 59 (idents -> ident .)
    IN_PORT         reduce using rule 59 (idents -> ident .)
    OUT_PORT        reduce using rule 59 (idents -> ident .)
    TRANS           reduce using rule 59 (idents -> ident .)
    EXTERN_TYPE     reduce using rule 59 (idents -> ident .)
    GLOBAL          reduce using rule 59 (idents -> ident .)
    STRUCT          reduce using rule 59 (idents -> ident .)
    ENUM            reduce using rule 59 (idents -> ident .)
    STATE_DECL      reduce using rule 59 (idents -> ident .)
    VOID            reduce using rule 59 (idents -> ident .)
    $end            reduce using rule 59 (idents -> ident .)
    }               reduce using rule 59 (idents -> ident .)


state 44

    (12) decl -> TRANS ( idents . , idents , ident pairs ) idents
    (13) decl -> TRANS ( idents . , idents pairs ) idents
    (14) decl -> TRANS ( idents . , idents , ident pairs ) idents idents
    (15) decl -> TRANS ( idents . , idents pairs ) idents idents

    ,               shift and go to state 63


state 45

    (58) idents -> { . identx }
    (60) identx -> . ident SEMI identx
    (61) identx -> . ident , identx
    (62) identx -> . ident identx
    (63) identx -> . empty
    (64) ident -> . IDENT
    (2) empty -> .

    IDENT           shift and go to state 4
    }               reduce using rule 2 (empty -> .)

    ident                          shift and go to state 64
    identx                         shift and go to state 65
    empty                          shift and go to state 66

state 46

    (11) decl -> OUT_PORT ( ident . , type , var pairs ) SEMI

    ,               shift and go to state 67


state 47

    (9) decl -> ACTION ( ident . pairs ) statements
    (65) pairs -> . , pairsx
    (66) pairs -> . empty
    (2) empty -> .

    ,               shift and go to state 50
    )               reduce using rule 2 (empty -> .)

    pairs                          shift and go to state 68
    empty                          shift and go to state 51

state 48

    (21) decl -> type ident pairs . SEMI

    SEMI            shift and go to state 69


state 49

    (24) func_decl -> type ident ( . params ) pairs SEMI
    (27) func_def -> type ident ( . params ) pairs statements
    (49) params -> . param , params
    (50) params -> . param
    (51) params -> . empty
    (52) param -> . type ident
    (53) param -> . type STAR ident
    (54) param -> . type STAR ident = STRING
    (55) param -> . type ident = NUMBER
    (56) param -> . type ident = LIT_BOOL
    (57) param -> . type ident = STRING
    (2) empty -> .
    (45) type -> . typestr
    (43) typestr -> . typestr DOUBLE_COLON ident
    (44) typestr -> . ident
    (64) ident -> . IDENT

    )               reduce using rule 2 (empty -> .)
    IDENT           shift and go to state 4

    ident                          shift and go to state 21
    param                          shift and go to state 70
    params                         shift and go to state 71
    typestr                        shift and go to state 19
    type                           shift and go to state 72
    empty                          shift and go to state 73

state 50

    (65) pairs -> , . pairsx
    (67) pairsx -> . pair , pairsx
    (68) pairsx -> . pair
    (69) pair -> . ident = STRING
    (70) pair -> . ident = ident
    (71) pair -> . ident = NUMBER
    (72) pair -> . STRING
    (64) ident -> . IDENT

    STRING          shift and go to state 75
    IDENT           shift and go to state 4

    pair                           shift and go to state 77
    ident                          shift and go to state 74
    pairsx                         shift and go to state 76

state 51

    (66) pairs -> empty .
